--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="buttons">#0a86c9</color>
     <color name="background_material_light">#ffffff</color>
-    <color name="vsd">#ffffff</color>
+    <color name="button">#D86026</color>
 </resources>
